strong in black and cv layout modifs

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,11 @@
 {% block content %}
 <h1>Bienvenue</h1>
 <h2>Maud Gesbert – Data Scientist</h2>
+<p>Parcourez mon CV :</p>
+<ul>
+    <li><a href="/cv">CV</a></li>
+</ul>
+
 <p>Explorez mes projets de data science :</p>
 <ul>
     <li><a href="/projects/heart_disease">Heart Disease</a></li>
