--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,7 @@
   --color-bg: #FFFFFF;         /* fond */
   --color-btn-bg: #3B82F6;     /* bleu vif bouton */
   --color-btn-text: #FFFFFF;   /* texte bouton */
+  --color-strong : #000000;    /* texte strong */
 }
 
 body {
@@ -38,6 +39,10 @@ h1 {
 
 h2 {
   color: var(--color-h2);
+}
+
+strong {
+  color: var(--color-primary);
 }
 
 .btn {
