--- a/templates/cv/cv.html
+++ b/templates/cv/cv.html
@@ -1,6 +1,14 @@
 {% extends "base.html" %}
 {% block title %}CV - Maud Gesbert{% endblock %}
 {% block content %}
+<style>
+  /* Appliquer un espacement de 20px en dessous de chaque élément li dans les sections Expériences et Formation */
+  .experiences li,
+  .formations li {
+    margin-bottom: 20px;
+  }
+</style>
+
 <h1>Mon CV</h1>
 
 <section>
@@ -32,83 +40,181 @@
   Téléphone : 06 89 17 16 44</p>
 </section>
 
-<section>
+<section class="experiences">
   <h2>Expériences professionnelles</h2>
   <ul>
     <li>
-      <strong>Data Scientist – Commandement de l'Espace</strong> (oct. 2023 - mars 2025, Toulouse, Occitanie, France)<br>
+      <strong>Data Scientist – Commandement de l'Espace</strong><br>
+      (oct. 2023 - mars 2025, Toulouse, Occitanie, France)<br>
       Contrat en alternance<br>
       Compétences : Science des données · Analyse des données
       <ul>
         <li>
-          <strong>Création et implémentation de base de données :</strong> JMerise, PostgreSQL, MongoDB. Récupération des données d’intérêt et injection dans la base via Python (Airflow, requêtes API, scraping avec Selenium).
+          Création et implémentation de base de données : JMerise, PostgreSQL, MongoDB. Récupération des données d’intérêt et injection dans la base via Python (Airflow, requêtes API, scraping avec Selenium).
         </li>
         <li>
-          <strong>Tests et évaluations de modèles :</strong> Évaluation des performances de différents modèles de détection et de classification sur les manoeuvres orbitales afin d'améliorer leur suivi. Utilisation de Python (Random Forest, Deep Neural Network).
+          Tests et évaluations de modèles : Évaluation des performances de différents modèles de détection et de classification sur les manoeuvres orbitales afin d'améliorer leur suivi. Utilisation de Python (Random Forest, Deep Neural Network).
         </li>
         <li>
-          <strong>Modélisation prédictive :</strong> Réalisation d’un modèle pour prédire les lieux de retombées atmosphériques à risques en se basant sur Python (Régression Linéaire).
+          Modélisation prédictive : Réalisation d’un modèle pour prédire les lieux de retombées atmosphériques à risques en se basant sur Python (Régression Linéaire).
         </li>
         <li>
-          <strong>Environnement HPC :</strong> Travail sur la partie bac à sable d’un HPC – Linux (Alma &amp; Debian).
+          Environnement HPC : Travail sur la partie bac à sable d’un HPC – Linux (Alma &amp; Debian).
         </li>
       </ul>
     </li>
     <li>
-      <strong>Contrôleuse de gestion – Airbus Defence and Space</strong> (mai 2022 - mai 2023, Toulouse, Occitanie, France)<br>
-      CDI<br>
-      Réalisation mensuelle du suivi des marges et contrôle des revenus, explication des écarts entre le budget et les coûts réels, présentation du budget pour les années futures.<br>
+      <strong>Contrôleuse de gestion – Airbus Defence and Space</strong><br>
+      (mai 2022 - mai 2023, Toulouse, Occitanie, France)<br>
       Compétences : Gestion financière · Indicateurs clés de performance · Business Analysis
+      <ul>
+        <li>
+          Réalisation mensuelle du suivi des marges et contrôle des revenus
+        </li>
+        <li>
+          Explication des écarts entre le budget et les coûts réels
+        </li>
+        <li>
+          Présentation du budget pour les années futures
+        </li>
+      </ul>
     </li>
     <li>
-      <strong>Analyste financière – Amazon</strong> (août 2020 - mai 2021, Région de Bratislava, Slovaquie)<br>
-      Résolution des problèmes en coopération avec les fournisseurs d'Amazon pour faciliter les paiements, coopération avec les services internes pour garantir des paiements rapides et corrects, mise en œuvre d'améliorations de processus pour une résolution plus rapide des problèmes transactionnels.<br>
-      Compétences : Gestion financière · Client Relations · Business Analysis
+      <strong>Analyste financière – Amazon</strong> (août 2020 - mai 2021, Bratislava, Slovaquie)<br>
+      Compétences : Gestion financière · Client Relations · Business Analysis <br>
+      <ul>
+        <li>
+          Résolution des problèmes en coopération avec les fournisseurs d'Amazon pour faciliter les paiements
+        </li>
+        <li>
+          Coopération avec les services internes pour garantir des paiements rapides et corrects
+        </li> 
+        <li>
+          Mise en œuvre d'améliorations de processus pour une résolution plus rapide des problèmes transactionnels
+        </li> 
+      </ul>
     </li>
     <li>
-      <strong>Ingénieure Commercial – Bertin Technologies</strong> (oct. 2018 - nov. 2019, Central Singapore)<br>
-      Dans l'entité dédiée aux équipements pharmaceutiques : identification de nouveaux prospects et partenaires commerciaux (B2B et B2C), analyse financière et commerciale des partenaires potentiels, communication et suivi pour conclure de nouveaux contrats, prise de contact auprès des clients potentiels pour déterminer leurs besoins et présentation de propositions technico-commerciales, gestion et développement du réseau de distributeurs, réalisation de reportings détaillés.<br>
+      <strong>Ingénieure Commercial – Bertin Technologies</strong> (oct. 2018 - nov. 2019, Singapour)<br>
+      Compétences : Client Relations · Secteur de la biotechnologie · Indicateurs clés de performance · Negotiation · Business Analysis<br>
+      Dans l'entité dédiée aux équipements pharmaceutiques 
+      <ul>
+        <li>
+          Identification de nouveaux prospects et partenaires commerciaux (B2B et B2C),
+        </li>
+        <li>
+          Analyse financière et commerciale des partenaires potentiels
+        </li>
+        <li>
+          Communication et suivi pour conclure de nouveaux contrats
+        </li>
+        <li>
+          Prise de contact auprès des clients potentiels pour déterminer leurs besoins et présentation de propositions technico-commerciales
+        </li>
+        <li>
+          Gestion et développement du réseau de distributeurs
+        </li>
+        <li>
+          Réalisation de reportings détaillés.
+        </li>
+      </ul>
       Trois nouveaux contrats de distribution ont été conclus, générant une augmentation des ventes de 30% sur la zone APAC.<br>
-      Compétences : Client Relations · Secteur de la biotechnologie · Indicateurs clés de performance · Negotiation · Business Analysis
+
     </li>
     <li>
-      <strong>Consultante Junior – SunTseu</strong> (sept. 2017 - sept. 2018, Châtillon, Île-de-France, France)<br>
-      Au sein de la Practice Life Sciences : recueil des besoins métiers en vue d’un changement de logiciel CRM, analyse et modélisation des processus, rédaction des cahiers des charges et spécifications fonctionnelles, paramétrages et tests en Sandbox pour préparer la mise en production, accompagnement au changement post-déploiement.<br>
-      CRM : Salesforce et Veeva<br>
-      Compétences : Collecte des exigences · Client Relations
+      <strong>Consultante Junior – SunTseu</strong> (sept. 2017 - sept. 2018, Châtillon, Île-de-France)<br>
+      Compétences : Collecte des exigences · Relations Client  · CRM : Salesforce et Veeva
+      Au sein de la Practice Life Sciences
+      <ul>
+        <li>
+          Recueil des besoins métiers en vue d’un changement de logiciel CRM
+        </li>
+        <li>
+          Analyse et modélisation des processus métiers
+        </li>
+        <li>
+          Rédaction des cahiers des charges et spécifications fonctionnelles
+        </li>
+        <li>
+          Paramétrages et tests en Sandbox pour préparer la mise en production,
+        </li>
+        <li>
+          Accompagnement au changement post-déploiement
+        </li>
+      </ul>
+      <br>
+
     </li>
   </ul>
 </section>
 
-<section>
+<section class="formations">
   <h2>Formation</h2>
   <ul>
     <li>
       <strong>Data Scientist – OpenClassrooms</strong> (oct. 2023 - mars 2025)<br>
-      Activités et associations : Langages &amp; frameworks (Python, Git, MLFlow), Machine &amp; Deep Learning (XGBoost, SVM, CNN, NLP), Big Data &amp; Cloud (PySpark, Hadoop, AWS), MLOps &amp; Déploiement (CI/CD, API).<br>
-      Cours en partenariat avec CentraleSupélec : analyse de données éducatives, préparation des données pour un organisme de santé publique, prédiction de la consommation énergétique des bâtiments, segmentation client pour un e-commerce, classification automatique des biens de consommation, développement d’un modèle de scoring financier, création d’un dashboard interactif, traitement Big Data sur le Cloud, cadrage d’un projet IA.<br>
-      Compétences : Science des données · Analyse des données · Analyse statistique
+      Compétences : Science des données · Analyse des données · Analyse statistique<br>
+
+      Activités et associations : Langages &amp; frameworks<br>
+      Python, Git, MLFlow<br><br>
+      Machine &amp; Deep Learning, XGBoost, SVM, CNN, NLP<br>
+      Big Data &amp; Cloud<br>
+      PySpark, Hadoop, AWS<br><br>
+      MLOps &amp; Déploiement<br>
+      CI/CD, API<br><br>
+      Cours en partenariat avec CentraleSupélec :<br>
+      Collecter, explorer, pré parer et analyser des données<br>
+      Élaborer des modè les pré dictifs<br>
+      Déployer des modè les de données<br>
+      Communiquer les résultats grâce à des visualisations<br>
+      Participer à l'organisation et au pilotage d'un projet data science &amp; IA<br><br>
+
+      Projets :<br>
+      Analyse de données éducatives<br>
+      Préparation des données pour un organisme de santé publique<br> 
+      Prédiction de la consommation énergétique des bâtiments<br>
+      Segmentation client pour un e-commerce<br>
+      Classification automatique des biens de consommation<br>
+      Développement d’un modèle de scoring financier<br> 
+      Création d’un dashboard interactif<br>
+      Traitement Big Data sur le Cloud<br> 
+      Cadrage d’un projet IA
     </li>
     <li>
       <strong>Data Analyst, Analyse de données – DataBird</strong> (févr. 2023 - mai 2023)<br>
-      Activités et associations : Mise en place d'un projet d'analyse de données en collaboration avec une entreprise pour fournir une analyse approfondie des ventes ; cours avancés sur l'extraction et la manipulation de données avec SQL ; cours avancés sur Python (études statistiques avec Pandas et NumPy, requêtage d'API REST, scraping) ; visualisation avec Tableau.<br>
-      Compétences : GitHub, Science des données, Rapports et analyses, Statistiques, ETL, Analyse statistique, Bases de données, Python, SciPy, Data analytics, SQL, Tableau, Visualisation de données
+      Compétences : GitHub, Rapports et analyses, Statistiques, ETL, Bases de données, Python, SQL, Tableau, Visualisation de données
+      Activités et associations :<br>
+      Mise en place d'un projet d'analyse de données en collaboration avec une entreprise pour fournir une analyse approfondie des ventes <br>
+      Cours avancés sur l'extraction et la manipulation de données avec SQL<br>
+      Cours avancés sur Python (études statistiques avec Pandas et NumPy, requêtage d'API REST, scraping)<br> 
+      Visualisation avec Tableau
     </li>
     <li>
       <strong>Dual MSc&amp;MA : Finance and Investments – London School of Business and Finance (LSBF)</strong> (oct. 2019 - mars 2022)<br>
-      Cours : analyse commerciale et financière, finance d'entreprise avancée, finance quantitative et marchés financiers, fusion, acquisition et capital privé.<br>
-      Compétences : Statistiques · Data analytics
+      Cours :<br>
+      Analyse commerciale et financière<br>
+      Finance d'entreprise avancée
+      Finance quantitative et marchés financiers<br> 
+      Fusion, acquisition et capital privé
     </li>
     <li>
       <strong>Master of Business Administration - MBA, Management des biotechnologies – Ionis-STM, école de double compétence</strong> (2015 - 2017)<br>
-      Cours : Business Administration, biostatistiques, conduite du changement, finance d'entreprise, gestion de projet dans l'industrie pharmaceutique, marketing stratégique et opérationnel des bioproduits, immunotechnologies.<br>
-      Compétences : Statistiques · Secteur de la biotechnologie · Indicateurs clés de performance · Biostatistiques
+      Compétences : Statistiques · Secteur de la biotechnologie · Indicateurs clés de performance · Biostatistiques <br>
+      Cours : <br>
+      Business Administration<br>
+      Biostatistiques<br>
+      Conduite du changement<br>
+      Finance d'entreprise<br>
+      Gestion de projet dans l'industrie pharmaceutique<br>
+      Marketing stratégique et opérationnel des bioproduits<br>
+      Immunotechnologies
     </li>
     <li>
       <strong>Licence de biologie humaine et biotechnologies, Biologie – Aix-Marseille Université</strong> (sept. 2012 - mai 2015)<br>
+      Compétences : Secteur de la biotechnologie · Biostatistiques<br>
       Étude des méthodes de genèse de nouvelles lignées cellulaires et des manipulations génétiques.<br>
-      Compétences : Secteur de la biotechnologie · Biostatistiques
     </li>
   </ul>
 </section>
+<a href="/" class="btn">Retour à l'accueil</a>
 {% endblock %}
