--- a/templates/cv/cv.html
+++ b/templates/cv/cv.html
@@ -26,7 +26,7 @@
   <p><strong>Big Data &amp; Cloud :</strong><br>
   PySpark, Hadoop, AWS</p>
   <p><strong>MLOps &amp; Déploiement :</strong><br>
-  CI/CD, API</p>
+  CI/CD, API</p><br>
   <p><strong>Machine Learning engineering :</strong><br>
   PyCharm, Jira</p>
   <p><strong>Langues :</strong><br>
@@ -46,8 +46,8 @@
     <li>
       <strong>Data Scientist – Commandement de l'Espace</strong><br>
       (oct. 2023 - mars 2025, Toulouse, Occitanie, France)<br>
-      Contrat en alternance<br>
-      Compétences : Science des données · Analyse des données
+      Alternance<br><br>
+      Compétences : Science des données · Analyse des données<br><br> 
       <ul>
         <li>
           Création et implémentation de base de données : JMerise, PostgreSQL, MongoDB. Récupération des données d’intérêt et injection dans la base via Python (Airflow, requêtes API, scraping avec Selenium).
@@ -65,8 +65,8 @@
     </li>
     <li>
       <strong>Contrôleuse de gestion – Airbus Defence and Space</strong><br>
-      (mai 2022 - mai 2023, Toulouse, Occitanie, France)<br>
-      Compétences : Gestion financière · Indicateurs clés de performance · Business Analysis
+      (mai 2022 - mai 2023, Toulouse, Occitanie, France)<br><br>
+      Compétences : Gestion financière · Indicateurs clés de performance · Business Analysis<br><br> 
       <ul>
         <li>
           Réalisation mensuelle du suivi des marges et contrôle des revenus
@@ -80,8 +80,8 @@
       </ul>
     </li>
     <li>
-      <strong>Analyste financière – Amazon</strong> (août 2020 - mai 2021, Bratislava, Slovaquie)<br>
-      Compétences : Gestion financière · Client Relations · Business Analysis <br>
+      <strong>Analyste financière – Amazon</strong> (août 2020 - mai 2021, Bratislava, Slovaquie)<br><br>
+      Compétences : Gestion financière · Client Relations · Business Analysis <br><br> 
       <ul>
         <li>
           Résolution des problèmes en coopération avec les fournisseurs d'Amazon pour faciliter les paiements
@@ -96,7 +96,7 @@
     </li>
     <li>
       <strong>Ingénieure Commercial – Bertin Technologies</strong> (oct. 2018 - nov. 2019, Singapour)<br>
-      Compétences : Client Relations · Secteur de la biotechnologie · Indicateurs clés de performance · Negotiation · Business Analysis<br>
+      Compétences : Client Relations · Secteur de la biotechnologie · Indicateurs clés de performance · Negotiation · Business Analysis<br><br> 
       Dans l'entité dédiée aux équipements pharmaceutiques 
       <ul>
         <li>
@@ -123,7 +123,7 @@
     </li>
     <li>
       <strong>Consultante Junior – SunTseu</strong> (sept. 2017 - sept. 2018, Châtillon, Île-de-France)<br>
-      Compétences : Collecte des exigences · Relations Client  · CRM : Salesforce et Veeva
+      Compétences : Collecte des exigences · Relations Client  · CRM : Salesforce et Veeva<br> <br> 
       Au sein de la Practice Life Sciences
       <ul>
         <li>
@@ -152,8 +152,8 @@
   <h2>Formation</h2>
   <ul>
     <li>
-      <strong>Data Scientist – OpenClassrooms</strong> (oct. 2023 - mars 2025)<br>
-      Compétences : Science des données · Analyse des données · Analyse statistique<br>
+      <strong>Master Data Science – OpenClassrooms</strong> (oct. 2023 - mars 2025)<br><br>
+      Compétences : Science des données · Analyse des données · Analyse statistique<br><br> 
 
       Activités et associations : Langages &amp; frameworks<br>
       Python, Git, MLFlow<br><br>
@@ -163,8 +163,8 @@
       MLOps &amp; Déploiement<br>
       CI/CD, API<br><br>
       Cours en partenariat avec CentraleSupélec :<br>
-      Collecter, explorer, pré parer et analyser des données<br>
-      Élaborer des modè les pré dictifs<br>
+      Collecter, explorer, préparer et analyser des données<br>
+      Élaborer des modè les prédictifs<br>
       Déployer des modè les de données<br>
       Communiquer les résultats grâce à des visualisations<br>
       Participer à l'organisation et au pilotage d'un projet data science &amp; IA<br><br>
@@ -181,8 +181,8 @@
       Cadrage d’un projet IA
     </li>
     <li>
-      <strong>Data Analyst, Analyse de données – DataBird</strong> (févr. 2023 - mai 2023)<br>
-      Compétences : GitHub, Rapports et analyses, Statistiques, ETL, Bases de données, Python, SQL, Tableau, Visualisation de données
+      <strong>Bootcamp Analyse de données – DataBird</strong> (févr. 2023 - mai 2023)<br><br>
+      Compétences : GitHub, Rapports et analyses, Statistiques, ETL, Bases de données, Python, SQL, Tableau, Visualisation de données<br><br> 
       Activités et associations :<br>
       Mise en place d'un projet d'analyse de données en collaboration avec une entreprise pour fournir une analyse approfondie des ventes <br>
       Cours avancés sur l'extraction et la manipulation de données avec SQL<br>
@@ -190,7 +190,8 @@
       Visualisation avec Tableau
     </li>
     <li>
-      <strong>Dual MSc&amp;MA : Finance and Investments – London School of Business and Finance (LSBF)</strong> (oct. 2019 - mars 2022)<br>
+      <strong>Dual MSc&amp;MA : Finance and Investments – London School of Business and Finance (LSBF)</strong> (oct. 2019 - mars 2022)<br><br>
+      Compétences : Analyse financière · Indicateurs clés de performances <br><br> 
       Cours :<br>
       Analyse commerciale et financière<br>
       Finance d'entreprise avancée
@@ -198,9 +199,9 @@
       Fusion, acquisition et capital privé
     </li>
     <li>
-      <strong>Master of Business Administration - MBA, Management des biotechnologies – Ionis-STM, école de double compétence</strong> (2015 - 2017)<br>
-      Compétences : Statistiques · Secteur de la biotechnologie · Indicateurs clés de performance · Biostatistiques <br>
-      Cours : <br>
+      <strong>Master of Business Administration - MBA, Management des biotechnologies – Ionis-STM, école de double compétence</strong> (2015 - 2017)<br><br>
+      Compétences : Statistiques · Secteur de la biotechnologie · Indicateurs clés de performances · Biostatistiques <br><br> 
+      Cours :<br>
       Business Administration<br>
       Biostatistiques<br>
       Conduite du changement<br>
@@ -210,8 +211,8 @@
       Immunotechnologies
     </li>
     <li>
-      <strong>Licence de biologie humaine et biotechnologies, Biologie – Aix-Marseille Université</strong> (sept. 2012 - mai 2015)<br>
-      Compétences : Secteur de la biotechnologie · Biostatistiques<br>
+      <strong>Licence de biologie humaine et biotechnologies, Biologie – Aix-Marseille Université</strong> (sept. 2012 - mai 2015)<br><br>
+      Compétences : Secteur de la biotechnologie · Biostatistiques<br><br> 
       Étude des méthodes de genèse de nouvelles lignées cellulaires et des manipulations génétiques.<br>
     </li>
   </ul>
