strong in deep green instead of black

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,7 +6,7 @@
   --color-bg: #FFFFFF;         /* fond */
   --color-btn-bg: #3B82F6;     /* bleu vif bouton */
   --color-btn-text: #FFFFFF;   /* texte bouton */
-  --color-strong : #000000;    /* texte strong */
+  --color-strong : #00553E;    /* texte strong */
 }
 
 body {
