--- a/templates/cv/cv.html
+++ b/templates/cv/cv.html
@@ -18,24 +18,27 @@
 
 <section>
   <h2>Compétences</h2>
-  <p><strong>Data Science :</strong></p>
-  <p><strong>Langages &amp; frameworks :</strong><br>
+  <h3>Data Science :</h3>
+  <p><important-text>Langages &amp; frameworks :</important-text><br>
   Python, MySQL, PostgreSQL, Git, MLFlow</p>
-  <p><strong>Machine &amp; Deep Learning :</strong><br>
+  <p><important-text>Machine &amp; Deep Learning :</important-text><br>
   Régression linéaire, XGBoost, SVM, CNN, NLP</p>
-  <p><strong>Big Data &amp; Cloud :</strong><br>
+  <p><important-text>Big Data &amp; Cloud :</important-text><br>
   PySpark, Hadoop, AWS</p>
-  <p><strong>MLOps &amp; Déploiement :</strong><br>
+  <p><important-text>MLOps &amp; Déploiement :</important-text><br>
   CI/CD, API</p><br>
-  <p><strong>Machine Learning engineering :</strong><br>
-  PyCharm, Jira</p>
-  <p><strong>Langues :</strong><br>
-  Français (Langue Maternelle), Anglais (Courant)</p>
+
+  <h3>Machine Learning engineering :</h3>
+  <p>PyCharm, Jira</p><br>
+
+  <h3>Langues :</h3>
+  Français (Langue Maternelle)<br>
+  Anglais (Courant)</p>
 </section>
 
 <section>
   <h2>Références</h2>
-  <p><strong>Matthieu Compin</strong><br>
+  <h3>Matthieu Compin</h3>br>
   Expert Technique Espace au Commandement de l'Espace (CdE)<br>
   Téléphone : 06 89 17 16 44</p>
 </section>
@@ -44,7 +47,7 @@
   <h2>Expériences professionnelles</h2>
   <ul>
     <li>
-      <strong>Data Scientist – Commandement de l'Espace</strong><br>
+      <important-text>Data Scientist – Commandement de l'Espace</important-text><br>
       (oct. 2023 - mars 2025, Toulouse, Occitanie, France)<br>
       Alternance<br><br>
       Compétences : Science des données · Analyse des données<br><br> 
@@ -64,7 +67,7 @@
       </ul>
     </li>
     <li>
-      <strong>Contrôleuse de gestion – Airbus Defence and Space</strong><br>
+      <important-text>Contrôleuse de gestion – Airbus Defence and Space</important-text><br>
       (mai 2022 - mai 2023, Toulouse, Occitanie, France)<br><br>
       Compétences : Gestion financière · Indicateurs clés de performance · Business Analysis<br><br> 
       <ul>
@@ -80,7 +83,8 @@
       </ul>
     </li>
     <li>
-      <strong>Analyste financière – Amazon</strong> (août 2020 - mai 2021, Bratislava, Slovaquie)<br><br>
+      <important-text>Analyste financière – Amazon</important-text><br> 
+      (août 2020 - mai 2021, Bratislava, Slovaquie)<br><br>
       Compétences : Gestion financière · Client Relations · Business Analysis <br><br> 
       <ul>
         <li>
@@ -95,7 +99,7 @@
       </ul>
     </li>
     <li>
-      <strong>Ingénieure Commercial – Bertin Technologies</strong> (oct. 2018 - nov. 2019, Singapour)<br>
+      <important-text>Ingénieure Commercial – Bertin Technologies</important-text> (oct. 2018 - nov. 2019, Singapour)<br>
       Compétences : Client Relations · Secteur de la biotechnologie · Indicateurs clés de performance · Negotiation · Business Analysis<br><br> 
       Dans l'entité dédiée aux équipements pharmaceutiques 
       <ul>
@@ -122,7 +126,7 @@
 
     </li>
     <li>
-      <strong>Consultante Junior – SunTseu</strong> (sept. 2017 - sept. 2018, Châtillon, Île-de-France)<br>
+      <important-text>Consultante Junior – SunTseu</important-text> (sept. 2017 - sept. 2018, Châtillon, Île-de-France)<br>
       Compétences : Collecte des exigences · Relations Client  · CRM : Salesforce et Veeva<br> <br> 
       Au sein de la Practice Life Sciences
       <ul>
@@ -149,19 +153,24 @@
 </section>
 
 <section class="formations">
-  <h2>Formation</h2>
+  <h2>Formations</h2>
   <ul>
     <li>
-      <strong>Master Data Science – OpenClassrooms</strong> (oct. 2023 - mars 2025)<br><br>
+      <important-text>Master Data Science – OpenClassrooms</important-text><br>(oct. 2023 - mars 2025)<br><br>
       Compétences : Science des données · Analyse des données · Analyse statistique<br><br> 
 
-      Activités et associations : Langages &amp; frameworks<br>
-      Python, Git, MLFlow<br><br>
-      Machine &amp; Deep Learning, XGBoost, SVM, CNN, NLP<br>
+      Langages &amp; frameworks :<br>
+      Python, SQL, NoSQL, Git, MLFlow<br><br>
+
+      Machine &amp; Deep Learning :<br>
+      XGBoost, SVM, CNN, NLP<br><br>
+
       Big Data &amp; Cloud<br>
       PySpark, Hadoop, AWS<br><br>
-      MLOps &amp; Déploiement<br>
+
+      MLOps &amp; Déploiement :<br>
       CI/CD, API<br><br>
+
       Cours en partenariat avec CentraleSupélec :<br>
       Collecter, explorer, préparer et analyser des données<br>
       Élaborer des modè les prédictifs<br>
@@ -181,7 +190,7 @@
       Cadrage d’un projet IA
     </li>
     <li>
-      <strong>Bootcamp Analyse de données – DataBird</strong> (févr. 2023 - mai 2023)<br><br>
+      <important-text>Bootcamp Analyse de données – DataBird</important-text> <br>(févr. 2023 - mai 2023)<br><br>
       Compétences : GitHub, Rapports et analyses, Statistiques, ETL, Bases de données, Python, SQL, Tableau, Visualisation de données<br><br> 
       Activités et associations :<br>
       Mise en place d'un projet d'analyse de données en collaboration avec une entreprise pour fournir une analyse approfondie des ventes <br>
@@ -190,7 +199,7 @@
       Visualisation avec Tableau
     </li>
     <li>
-      <strong>Dual MSc&amp;MA : Finance and Investments – London School of Business and Finance (LSBF)</strong> (oct. 2019 - mars 2022)<br><br>
+      <important-text>Dual MSc&amp;MA : Finance and Investments – London School of Business and Finance (LSBF)</important-text><br> (oct. 2019 - mars 2022)<br><br>
       Compétences : Analyse financière · Indicateurs clés de performances <br><br> 
       Cours :<br>
       Analyse commerciale et financière<br>
@@ -199,7 +208,7 @@
       Fusion, acquisition et capital privé
     </li>
     <li>
-      <strong>Master of Business Administration - MBA, Management des biotechnologies – Ionis-STM, école de double compétence</strong> (2015 - 2017)<br><br>
+      <important-text>Master of Business Administration - MBA, Management des biotechnologies – Ionis-STM, école de double compétence</important-text> <br>(2015 - 2017)<br><br>
       Compétences : Statistiques · Secteur de la biotechnologie · Indicateurs clés de performances · Biostatistiques <br><br> 
       Cours :<br>
       Business Administration<br>
@@ -211,7 +220,7 @@
       Immunotechnologies
     </li>
     <li>
-      <strong>Licence de biologie humaine et biotechnologies, Biologie – Aix-Marseille Université</strong> (sept. 2012 - mai 2015)<br><br>
+      <important-text>Licence de biologie humaine et biotechnologies, Biologie – Aix-Marseille Université</important-text> <br>(sept. 2012 - mai 2015)<br><br>
       Compétences : Secteur de la biotechnologie · Biostatistiques<br><br> 
       Étude des méthodes de genèse de nouvelles lignées cellulaires et des manipulations génétiques.<br>
     </li>
