Adding strong text trial and h3, bold

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,11 +43,12 @@ h2 {
 }
 
 h3 {
-  color: var(--color-strong);
+  color: var(--color-h3);
 }
 
 important-text {
   color: var(--color-important);
+  font-weight: bold;
 }
 
 .btn {
