--- a/templates/cv/cv.html
+++ b/templates/cv/cv.html
@@ -38,7 +38,7 @@
 
 <section>
   <h2>Références</h2>
-  <h3>Matthieu Compin</h3>br>
+  <h3>Matthieu Compin</h3>
   Expert Technique Espace au Commandement de l'Espace (CdE)<br>
   Téléphone : 06 89 17 16 44</p>
 </section>
@@ -99,7 +99,8 @@
       </ul>
     </li>
     <li>
-      <important-text>Ingénieure Commercial – Bertin Technologies</important-text> (oct. 2018 - nov. 2019, Singapour)<br>
+      <important-text>Ingénieure Commercial – Bertin Technologies</important-text><br>
+      (oct. 2018 - nov. 2019, Singapour)<br>
       Compétences : Client Relations · Secteur de la biotechnologie · Indicateurs clés de performance · Negotiation · Business Analysis<br><br> 
       Dans l'entité dédiée aux équipements pharmaceutiques 
       <ul>
@@ -126,7 +127,8 @@
 
     </li>
     <li>
-      <important-text>Consultante Junior – SunTseu</important-text> (sept. 2017 - sept. 2018, Châtillon, Île-de-France)<br>
+      <important-text>Consultante Junior – SunTseu</important-text> <br>
+      (sept. 2017 - sept. 2018, Châtillon, Île-de-France)<br>
       Compétences : Collecte des exigences · Relations Client  · CRM : Salesforce et Veeva<br> <br> 
       Au sein de la Practice Life Sciences
       <ul>
