Adding spaces, reorganising home page

--- a/templates/cv/cv.html
+++ b/templates/cv/cv.html
@@ -14,10 +14,10 @@
 <section>
   <h2>Profil</h2>
   <p>Data Scientist passionnée par l’analyse, la modélisation et la valorisation des données.</p>
-</section>
+</section><br>
 
 <section>
-  <h2>Compétences</h2>
+  <h2>Compétences</h2><br>
   <h3>Data Science :</h3>
   <p><important-text>Langages &amp; frameworks :</important-text><br>
   Python, MySQL, PostgreSQL, Git, MLFlow</p>
@@ -26,22 +26,22 @@
   <p><important-text>Big Data &amp; Cloud :</important-text><br>
   PySpark, Hadoop, AWS</p>
   <p><important-text>MLOps &amp; Déploiement :</important-text><br>
-  CI/CD, API</p><br>
+  CI/CD, API</p>
 
   <h3>Machine Learning engineering :</h3>
-  <p>PyCharm, Jira</p><br>
+  <p>PyCharm, Jira</p>
 
   <h3>Langues :</h3>
   Français (Langue Maternelle)<br>
   Anglais (Courant)</p>
-</section>
+</section><br>
 
 <section>
   <h2>Références</h2>
   <h3>Matthieu Compin</h3>
-  Expert Technique Espace au Commandement de l'Espace (CdE)<br>
+  Expert Technique Espace au Commandement de l'Espace (CdE)<br><br>
   Téléphone : 06 89 17 16 44</p>
-</section>
+</section><br>
 
 <section class="experiences">
   <h2>Expériences professionnelles</h2>
@@ -53,7 +53,8 @@
       Compétences : Science des données · Analyse des données<br><br> 
       <ul>
         <li>
-          Création et implémentation de base de données : JMerise, PostgreSQL, MongoDB. Récupération des données d’intérêt et injection dans la base via Python (Airflow, requêtes API, scraping avec Selenium).
+          Création et implémentation de base de données : JMerise, PostgreSQL, MongoDB. <br>
+          Récupération des données d’intérêt et injection dans la base via Python (Airflow, requêtes API, scraping avec Selenium).
         </li>
         <li>
           Tests et évaluations de modèles : Évaluation des performances de différents modèles de détection et de classification sur les manoeuvres orbitales afin d'améliorer leur suivi. Utilisation de Python (Random Forest, Deep Neural Network).
@@ -100,9 +101,9 @@
     </li>
     <li>
       <important-text>Ingénieure Commercial – Bertin Technologies</important-text><br>
-      (oct. 2018 - nov. 2019, Singapour)<br>
+      (oct. 2018 - nov. 2019, Singapour)<br><br>
       Compétences : Client Relations · Secteur de la biotechnologie · Indicateurs clés de performance · Negotiation · Business Analysis<br><br> 
-      Dans l'entité dédiée aux équipements pharmaceutiques 
+      Dans l'entité dédiée aux équipements pharmaceutiques :<br>
       <ul>
         <li>
           Identification de nouveaux prospects et partenaires commerciaux (B2B et B2C),
@@ -130,7 +131,7 @@
       <important-text>Consultante Junior – SunTseu</important-text> <br>
       (sept. 2017 - sept. 2018, Châtillon, Île-de-France)<br>
       Compétences : Collecte des exigences · Relations Client  · CRM : Salesforce et Veeva<br> <br> 
-      Au sein de la Practice Life Sciences
+      Au sein de la Practice Life Sciences : <br>
       <ul>
         <li>
           Recueil des besoins métiers en vue d’un changement de logiciel CRM
@@ -158,7 +159,7 @@
   <h2>Formations</h2>
   <ul>
     <li>
-      <important-text>Master Data Science – OpenClassrooms</important-text><br>(oct. 2023 - mars 2025)<br><br>
+      <important-text>Master Data Science – OpenClassrooms &amp; CentraleSupélec</important-text><br>(oct. 2023 - mars 2025)<br><br>
       Compétences : Science des données · Analyse des données · Analyse statistique<br><br> 
 
       Langages &amp; frameworks :<br>
@@ -173,7 +174,7 @@
       MLOps &amp; Déploiement :<br>
       CI/CD, API<br><br>
 
-      Cours en partenariat avec CentraleSupélec :<br>
+      Cours :<br>
       Collecter, explorer, préparer et analyser des données<br>
       Élaborer des modè les prédictifs<br>
       Déployer des modè les de données<br>
