--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,15 @@
 {% block content %}
 <h1>Bienvenue</h1>
 <h2>Maud Gesbert – Data Scientist</h2>
-<p>Parcourez mon CV :</p>
-<ul>
-    <li><a href="/cv">CV</a></li>
-</ul>
 
 <p>Explorez mes projets de data science :</p>
 <ul>
-    <li><a href="/projects/heart_disease">Heart Disease</a></li>
+    <li><a href="/projects/heart_disease">Heart Diseases</a></li>
     <li><a href="/projects/lite">Lite</a></li>
+</ul>
+
+<p>Parcourez une version plus complète de mon CV :</p>
+<ul>
+    <li><a href="/cv">CV</a></li>
 </ul>
 {% endblock %}
