Heart Diseases form modifications_2

--- a/templates/projects/heart_disease/heart_disease.html
+++ b/templates/projects/heart_disease/heart_disease.html
@@ -8,7 +8,7 @@
   <!-- General Health -->
   <label>Quel est votre état de santé général ?
     <select name="GenHlth" required>
-      <option value="1">1 - Excellente</option>
+      <option value="1">1 - Excellent</option>
       <option value="2">2 - Bon</option>
       <option value="3">3 - Moyen</option>
       <option value="4">4 - Mauvais</option>
