Improving projetcs description

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
         <ul class="nav-links">
           <li><a href="/">Accueil</a></li>
           <li><a href="/cv">CV</a></li>
-          <li><a href="/projects/heart_disease">Projet Heart Diseases</a></li>
+          <li><a href="/projects/heart_disease">Projet Maladie Cardiaque</a></li>
           <li><a href="/projects/lite">Projet Lite</a></li>
         </ul>
       </div>
