--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
 
 <p>Explorez mes projets de data science :</p>
 <ul>
-    <li><a href="/projects/heart_disease">Heart Diseases</a></li>
-    <li><a href="/projects/lite">Lite</a></li>
+    <li><a href="/projects/heart_disease">Prédiction sur la possibilité de développer une maladie cardiaque</a></li>
+    <li><a href="/projects/lite">Lite - Consommation énergétique des voitures éléctriques</a></li>
 </ul>
 
 <p>Parcourez une version plus complète de mon CV :</p>
