--- a/templates/projects/heart_disease/heart_disease.html
+++ b/templates/projects/heart_disease/heart_disease.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Projet : Heart Disease{% endblock %}
 {% block content %}
-<h1>Projet : Prédiction des maladies cardiaques</h1>
+<h1>Prédiction sur la possibilité de développer une maladie cardiaque ou de faire une crise cardiaque</h1>
 
 <form method="post" action="/projects/heart_disease" onsubmit="return convertAge();">
 
