--- a/templates/projects/lite/lite.html
+++ b/templates/projects/lite/lite.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Projet : Lite{% endblock %}
 {% block content %}
-<h1>Projet : Lite</h1>
-<p>Présentation du projet Lite, avec des détails techniques et résultats obtenus.</p>
+<h1>Lite - Consommation des voitures éléctriques</h1>
+<p>Projet réalisé en groupe, pour finaliser le bootcamp d'analyse de données chez Databird.</p>
 <a href="/" class="btn">Retour à l'accueil</a>
 {% endblock %}
