--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,13 @@
 <h1>Bienvenue</h1>
 <h2>Maud Gesbert – Data Scientist</h2>
 
-<p>Explorez mes projets de data science :</p>
+<p>Explorez mes projets de science des données :</p>
 <ul>
     <li><a href="/projects/heart_disease">Prédiction sur la possibilité de développer une maladie cardiaque</a></li>
+</ul>
+
+<p>Explorez mes projets d'analyses des données :</p>
+<ul>
     <li><a href="/projects/lite">Lite - Consommation énergétique des voitures éléctriques</a></li>
 </ul>
 
